# toki

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL  LICENSE  LICENSE.in  api.txt  appendlayer.cpp  basicsplitlayer.cpp  basicsplitlayer.h  bufferedtokenlayer.cpp  bufferedtokenlayer.h  combinelayer.cpp  combinelayer.h  config.cpp  config.h  config.ini  icu_tokenizer.pro  icustreamwrapper.cpp  icustreamwrapper.h  icustringsource.cpp  icustringsource.h  layertokenizer.cpp  layertokenizer.h  main.cpp  queuetokenlayer.cpp  queuetokenlayer.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  tokenizerconfig.cpp  tokenizerconfig.h  tokenlayer.cpp  tokenlayer.h  tokenlayerfactory.h  tokensource.cpp  tokensource.h  unicodesource.h  whitespacetokenizer.cpp  (+1 more)
CMakeScripts/: FindICU.cmake  FindLoki.cmake  FindPwrUtils.cmake
config/: config.ini  general.ini  ikipi-tok.ini  nkjp.ini  tok-agg-pl.txt  tok-agg-sgn.txt
doc/: Overview.txt  Writing_configs.txt  api-example.cpp
libtoki/: CMakeLists.txt  chunk.cpp  chunk.h  config.cpp  config.h  config_d.in  confignode.cpp  confignode.h  debug.cpp  debug.h  exception.cpp  exception.h  foreach.h  layertokenizer.cpp  layertokenizer.h  libtoki.pro  main.cpp  nullunicodesource.cpp  nullunicodesource.h  sentence.cpp  sentence.h  sentencesplitter.cpp  sentencesplitter.h  settings.cpp  settings.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  tokenlayer.cpp  tokenlayer.h  tokensource.cpp  tokensource.h  unicodeicustringwrapper.cpp  unicodeicustringwrapper.h  unicodeistreamwrapper.cpp  unicodeistreamwrapper.h  unicodesource.cpp  unicodesource.h  util.cpp  (+8 more)
libtoki/layers/: affixsplit.cpp  affixsplit.h  append.cpp  append.h  basicsplit.cpp  basicsplit.h  check.cpp  check.h  combine.cpp  combine.h  groupaffixsplit.cpp  groupaffixsplit.h  groupsplit.cpp  groupsplit.h  init.cpp  init.h  inputbuffer.cpp  inputbuffer.h  lexiconclassify.cpp  lexiconclassify.h  outputqueue.cpp  outputqueue.h  regexmatchsplit.cpp  regexmatchsplit.h  regexpclassify.cpp  regexpclassify.h  tokenlayer.cpp  tokenlayer.h
libtoki/parser/: loose_ini_paser.h
libtoki/srx/: document.cpp  document.h  exception.h  processor.cpp  processor.h  rule.cpp  rule.h  segmenter.cpp  segmenter.h  srx.cpp  srx.h  util.cpp  util.h
libtoki/token_layers/: affixsplitlayer.cpp  affixsplitlayer.h  appendlayer.cpp  appendlayer.h  basicsplitlayer.cpp  basicsplitlayer.h  checklayer.cpp  checklayer.h  combinelayer.cpp  combinelayer.h  groupaffixsplitlayer.cpp  groupaffixsplitlayer.h  groupsplitlayer.cpp  groupsplitlayer.h  inittokenlayers.cpp  inittokenlayers.h  inputbufferlayer.cpp  inputbufferlayer.h  lexiconclassifylayer.cpp  lexiconclassifylayer.h  outputqueuelayer.cpp  outputqueuelayer.h  regexmatchsplitlayer.cpp  regexmatchsplitlayer.h  regexpclassifylayer.cpp  regexpclassifylayer.h
libtoki/tokenizer/: layertokenizer.cpp  layertokenizer.h  tokenizer.cpp  tokenizer.h  whitespacetokenizer.cpp  whitespacetokenizer.h
libtoki/unicode/: icustringwrapper.cpp  icustringwrapper.h  istreamwrapper.cpp  istreamwrapper.h  nullsource.cpp  nullsource.h  sink.cpp  sink.h  source.cpp  source.h
libtoki/util/: confignode.cpp  confignode.h  debug.cpp  debug.h  foreach.h  pathsearch.cpp  pathsearch.h  settings.cpp  settings.h  util.cpp  util.h  xmlutil.cpp  xmlutil.h
test-app/: CMakeLists.txt  combined.ini  combined.json  combined.xml  config.ini  config.xml  main.cpp  test-app.pro  test.ini  user.ini
test_data/: a  c  d
tests/: CMakeLists.txt  compare.cpp  compare.h  conf.cpp  gen.sh  main.cpp  one.srx  regex.cpp  srx.cpp  test-sanity.sh  tests.pro  whitespace.cpp
tests/compare/: some_utf8.out
tests/compare/affix/: c.out  d.out
tests/compare/append/: append2.out
tests/compare/caseless/: a.out  b.out
tests/compare/group_affix/: a.out  b.out  c.out
tests/compare/group_affix_re/: c.out
tests/compare/group_split/: a.out  c.out
tests/compare/initial_ws/: a.out  b.out  c.out
tests/compare/lexicon/: a.out  b.out
tests/compare/regex_split/adv/: a.out  b.out  backref.out
tests/compare/regex_split/group_affix/: a.out  b.out  d.out
tests/compare/regex_split/group_split/: b.out  d.out  e.out
tests/compare/regex_split/split/: c.out  d.out  e.out  f.out
tests/compare/regexp/: a.out  b.out  d.out
tests/compare/split/: b.out  e.out  f.out
tests/compare/split_hyphens/: d.out
tests/compare/split_hyphens_re/: b.out  e.out
tests/compare/split_re/: a.out  c.out
tests/compare/srx/: a.out  main.ini  two-pl.out  two.out
tests/compare/unicodeset/: a.out  b.out
tests/compare/warnings/: a.in  c.ini  main.ini  split.out
tokenizer/: CMakeLists.txt  config.cpp  config.h  debug.cpp  debug.h  exception.h  layertokenizer.cpp  layertokenizer.h  nullunicodesource.cpp  nullunicodesource.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  tokenizer.pro  tokenizerconfig.cpp  tokenizerconfig.h  tokenlayer.cpp  tokenlayer.h  tokensource.cpp  tokensource.h  unicodeicustringwrapper.cpp  unicodeicustringwrapper.h  unicodeistreamwrapper.cpp  unicodeistreamwrapper.h  util.cpp  util.h  whitespacetokenizer.cpp  whitespacetokenizer.h
tokenizer/parser/: loose_ini_paser.h
tokenizer/token_layers/: affixsplitlayer.cpp  affixsplitlayer.h  appendlayer.cpp  appendlayer.h  basicsplitlayer.cpp  basicsplitlayer.h  combinelayer.cpp  combinelayer.h  inittokenlayers.cpp  inittokenlayers.h  inputbufferlayer.cpp  inputbufferlayer.h  lexiconclassifylayer.cpp  lexiconclassifylayer.h  outputqueuelayer.cpp  outputqueuelayer.h  regexpclassifylayer.cpp  regexpclassifylayer.h
toki-app/: CMakeLists.txt  abbrevs.txt  main.cpp  test.ini  toki-app.pro
unit_tests/: CMakeLists.txt  compare.cpp  conf.cpp  main.cpp  unit_tests  unit_tests.pro  whitespace.cpp
unit_tests/test_compare/: crash.ini
unit_tests/test_compare/affix/: d.out  main.ini
unit_tests/test_compare/append/: append1.ini  append1.out  append2.ini  main.ini
unit_tests/test_compare/lexicon/: main.ini
unit_tests/test_compare/regexp/: a.ini  b.ini  c.ini  d.ini  e.ini
unit_tests/test_compare/split/: b.out  d.out
unit_tests/test_compare/split_hyphens/: main.ini
(+10 files in other folders)
